<resources>
    <string name="app_name">Permanent Clock</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Open Weather Map -->
    <string name="owm_base_url">https://api.openweathermap.org/data/2.5/</string>
    <string name="owm_api_key">[ENTER API KEY HERE]</string>

    <!-- Preference Titles -->
    <string name="colors_header">Colors</string>

    <!-- Messages Preferences -->
    <string name="unit_title">Degrees in</string>

    <!-- Sync Preferences -->
    <string name="color_clock_title">Clock</string>
    <string name="color_date_title">Date</string>
    <string name="color_location_title">Location</string>
    <string name="color_weather_title">Weather details</string>

    <!-- Reset Settings Dialog -->
    <string name="reset_message">This will remove all your settings and revert to the default values. Continue?</string>
    <string name="reset_yes_btn">Yes</string>
    <string name="reset_no_btn">No</string>
</resources>
